AC_PREREQ([2.65])
AC_INIT([gntp-send], [0.1], [flast@flast.jp])

AM_INIT_AUTOMAKE([foreign -Wall])

AC_CONFIG_SRCDIR([source/growl.c])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC_C99
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

LT_INIT

# smart output
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
